--- a/deploy_gcp_infra.yaml
+++ b/deploy_gcp_infra.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: "django"
-        image: "malamcsc/django-todo-develop:tagversion"
+        image: "gcr.io/kubernetes-project-378913/test-project-images:tagversion"
         
 
         
@@ -30,13 +30,13 @@ metadata:
   name: "flask-service"
   namespace: "default"
   labels:
-    app: "flask"
+    app: "django"
 spec:
-  type: "NodePort"
   ports:
   - protocol: "TCP"
     port: 80
     targetPort: 8000
-    nodePort: 30008
   selector:
-    app: "flask"  
+    app: "django"
+  type: "LoadBalancer"
+  loadBalancerIP: "" 
