--- a/deploy_gcp_infra.yaml
+++ b/deploy_gcp_infra.yaml
@@ -27,7 +27,7 @@ spec:
 apiVersion: "v1"
 kind: "Service"
 metadata:
-  name: "flask-service"
+  name: "django-service"
   namespace: "default"
   labels:
     app: "django"
